fix: harden 26.2 chain actions and networking